Bug 356056 - Krita Animation Beta - Ctrl+drag to Copy Single Animation Frame Not Working
Summary: Krita Animation Beta - Ctrl+drag to Copy Single Animation Frame Not Working
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 2.9.10
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-29 08:39 UTC by sayantan.chaudhuri+kde
Modified: 2016-04-20 08:49 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sayantan.chaudhuri+kde 2015-11-29 08:39:57 UTC
Selecting a single frame in the Animation Docker and dragging it with ctrl key held does not copy that frame at the destination. 

And yet, selecting _more than one_ frames and then dragging them with ctrl held does copy them.

Reproducible: Always

Steps to Reproduce:
1. Create some frames in the Animation Docker.
2. Select exactly one frame.
3. Hold Ctrl and drag that frame to another one.

Actual Results:  
The selected frame should be copied to the destination frame. No special cursor is displayed signifying the copy action.

Expected Results:  
During the ctrl+drag a special cursor is displayed signifying the copy action. The destination frame is overwritten with a copy of the original selected frame.

When trying to do a ctrl+drag copy with multiple frames selected, whether contiguously or arbitrary, the action behaves as expected. The custom is displayed, and all the frames* are copied to their respective offsets.

*Relatedly, as a reported in another report, the first frame of any animation cannot be moved or copied regardless of whether it's selected by itself (broken behavior) or along additional frames (all frames other than the first one is copied.)
Comment 1 sayantan.chaudhuri+kde 2015-11-29 09:07:19 UTC
EDIT: Instead of "Animation Docker" I meant "Timeline Docker". I apologize for the error.
Comment 2 sayantan.chaudhuri+kde 2015-12-12 04:27:26 UTC
The behavior still remains in the animation beta 2.9.10
Comment 3 wolthera 2015-12-13 16:42:32 UTC
It does work here, but it is indeed far more fiddly than you would like.
Comment 4 Dmitry Kazakov 2015-12-14 14:22:38 UTC
Hi, Sayantan!

I got what you mean:

When one frame selected:
* Ctrl + Click + Drag --- doesn't start a drag.
* Click + Drag --- starts a 'move' drag
* Click + Drag + Ctrl --- starts a 'copy' drag

For multiple selection the order of clicking Ctrl doesn't matter.

This is a bug. I will try to fix it.
Comment 5 sayantan.chaudhuri+kde 2015-12-14 16:47:55 UTC
Hullo again Dmitry!

I hadn't realized that at all. I just tried it, and yes, with a single frame selected, the order of pressing ctrl affects the behavior as you describe. And for multiple frames, the order doesn't seem to matter.

I'm also happy to find a way to still copy individual frames by pressing ctrl after starting the drag in the meantime!
Comment 6 sayantan.chaudhuri+kde 2015-12-14 16:48:41 UTC
Forgot to add, thanks for tackling it :D
Comment 7 Dmitry Kazakov 2016-04-19 13:45:16 UTC
Git commit d207ffed0c40a59cd243fcaef7e9773fc0d7cad5 by Dmitry Kazakov.
Committed on 19/04/2016 at 13:45.
Pushed by dkazakov into branch 'master'.

Change timeline selection only when the thing is dropped, not when still dragging somewhere outside

M  +2    -1    plugins/dockers/animation/timeline_frames_view.cpp

http://commits.kde.org/krita/d207ffed0c40a59cd243fcaef7e9773fc0d7cad5
Comment 8 Dmitry Kazakov 2016-04-20 08:49:23 UTC
Fixed in master!