Fix D&D bugs related to really weird selection stuff in Qt

See comments in KisNodeView::selectionCommand() and
TimelineFramesView::startDrag().

BUG:356056
Fixes T1141
CC:kimageshop@kde.org